# AdventOfCode2025

./: DEPENDENCY_AUDIT.md  README.md  pyproject.toml
day01/: day01.py
day02/: day02.py
day03/: main.py
day04/: main.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: main.py
day11/: main.py
